# Sage_Auth_Example

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
kernel/: asgi.py  settings.py  urls.py  wsgi.py
pages/: forms.py  urls.py  views.py
pages/templates/: activation_email.html  email_verification_template.html  forget-password.html  home.html  login.html  login_otp.html  reactivate.html  reset_password.html  signup.html  verify.html  verify_email.html  verify_login.html
